syntax = "proto3";

package northstar.message;

service CustomerGrpcService {
    rpc Create(CustomerRequestMessage) returns (CustomerResponsMessage);    
}

message CustomerRequestMessage {
    string Id = 1;
    string FirstName = 2;   
    string LastName = 3;
    string Email = 4;
    string Street = 5;
    string Zip = 6;
    string City = 7;
}

message UserCreateSuccessMessage {
    string Id = 1;
}

message UserErrorMessage {
    repeated string Message = 1;
}
    
message CustomerResponsMessage {
    reserved 1;
    oneof MessageType {                      
        UserCreateSuccessMessage success = 2;
        UserErrorMessage error = 3;       
    }
}
 
